[gd_scene load_steps=14 format=2]

[ext_resource path="res://scenses/Player.gd" type="Script" id=1]
[ext_resource path="res://assets/images/duck/kaczkastoi/1.png" type="Texture" id=2]
[ext_resource path="res://assets/images/duck/kaczkastoi/2.png" type="Texture" id=3]
[ext_resource path="res://assets/images/duck/kaczkaidziepng/1.png" type="Texture" id=4]
[ext_resource path="res://assets/images/duck/kaczkaidziepng/2.png" type="Texture" id=5]
[ext_resource path="res://assets/images/duck/kaczkaskaczepng/1.png" type="Texture" id=6]
[ext_resource path="res://assets/images/duck/kaczkaskaczepng/2.png" type="Texture" id=7]
[ext_resource path="res://assets/sounds/Duck3.wav" type="AudioStream" id=8]
[ext_resource path="res://assets/sounds/Duck4.wav" type="AudioStream" id=9]
[ext_resource path="res://assets/sounds/Duck5.wav" type="AudioStream" id=10]
[ext_resource path="res://assets/sounds/duck7.wav" type="AudioStream" id=11]

[sub_resource type="CapsuleShape2D" id=1]
radius = 22.6917
height = 6.68311

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
} ]

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 1 )
speed_value = 100

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( -2.21334, 0.737168 )
scale = Vector2( 0.125, 0.125 )
frames = SubResource( 2 )
animation = "jump"
playing = true

[node name="Camera2D" type="Camera2D" parent="."]
current = true
smoothing_enabled = true

[node name="sound1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -7.0

[node name="sound2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -7.0

[node name="sound3" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -7.0

[node name="sound4" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -7.0

[node name="GravityTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="TripTimer" type="Timer" parent="."]
autostart = true
[connection signal="input_event" from="." to="." method="_on_Player_input_event"]
[connection signal="timeout" from="GravityTimer" to="." method="_on_GravityTimer_timeout"]
[connection signal="timeout" from="TripTimer" to="." method="_on_TripTimer_timeout"]
